--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,19 +2,19 @@
 
   <h2>Create Or Update</h2>
 
-<form>
+<form [formGroup]="Contactform" (ngSubmit)="onSubmit()" >
 <div class="container my-4 p-3">
   <div class="row">
     <div class="col">
       <div class="d-flex align-items-center">
         <label for="firstName" class="form-label me-2">Firstname</label>
-        <input type="text" id="firstName" class="form-control" placeholder="Enter first name" aria-label="First name">
+        <input type="text" id="firstName" class="form-control" placeholder="Enter first name" formControlName="firstname"  >
       </div>
     </div>
     <div class="col">
       <div class="d-flex align-items-center">
         <label for="lastName" class="form-label me-2">Lastname</label>
-        <input type="text" id="lastName" class="form-control" placeholder="Enter last name" aria-label="Last name">
+        <input type="text" id="lastName" class="form-control" placeholder="Enter last name"  formControlName="lastname">
       </div>
     </div>
   </div>
@@ -24,47 +24,47 @@
  <div class="row mb-3">
     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3">
+      <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter email">
     </div>
   </div>
   
   <div class="row mb-3">
     <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
     <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3">
+      <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter password">
     </div>
   </div>
 
    <div class="row mb-3">
     <label  class="col-sm-2 col-form-label">Gender</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="gender">
+      <input type="text" class="form-control" id="gender" formControlName="gender" placeholder="Enter your gender">
     </div>
   </div>
 
    <div class="row mb-3">
     <label  class="col-sm-2 col-form-label">Age</label>
     <div class="col-sm-10">
-      <input type="number" class="form-control" id="age">
+      <input type="number" class="form-control" id="age" formControlName="age" placeholder="Enter your age">
     </div>
   </div>
 
    <div class="row mb-3">
     <label class="col-sm-2 col-form-label">DOB</label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="dateOfBirth">
+      <input type="date" class="form-control" id="DOB" formControlName="DOB" placeholder="Enter your date of birth">
     </div>
   </div>
 
   <div class="row mb-3">
   <label for="inputAddress" class="col-sm-2 col-form-label">Address</label>
   <div class="col-sm-10">
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    <input type="text" class="form-control" id="address" formControlName="address"  placeholder="1234 Main St">
   </div>
 </div>
-
-<button mat-button color="primary" style="margin-right: 8px;">Back</button>
-<button mat-button color="accent">Save</button>
+  
+<!-- <button class="btn btn-secondary" style="margin-right: 8px;">Back</button> -->
+  <button [disabled]="Contactform.invalid" type="submit" class="btn btn-primary">Save</button>
 </form>
 </div>
 
